tests/profile/error/camera/gotogeo_wrongtype_latitude.profile
{
  "version": { "major": 12, "minor": 13 },
  "camera": {
    "type": "goToGeo",
    "anchor": "anchor",
    "latitude": "a",
    "longitude": 2.0,
    "altitude": 4.0
  }
}
